--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Multilevel Marketing Refferal Tracking system and assigning rewards based on 3 layers deep refferal",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
   "keywords": [
     "mlm",
